--- a/style.css
+++ b/style.css
@@ -919,7 +919,7 @@ footer {
 }
 
 /* MD DEVICES */
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 641px) and (max-width: 768px){
   .hero {
     flex-direction: column;
     gap: 1rem;
